--- a/public/test.html
+++ b/public/test.html
@@ -7,8 +7,6 @@
   <!-- 引入所需样式和库 -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/choices.js/public/assets/styles/choices.min.css" rel="stylesheet" />
-<link href="https://fonts.googleapis.com/css2?family=Roboto&family=Montserrat&family=Playfair+Display&display=swap" rel="stylesheet">
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
@@ -144,6 +142,20 @@
 <script>
 const ENDPOINT = "https://script.google.com/macros/s/AKfycbxe-P-iT8Jv8xSNTqdYB7SMi4sy2pPl8lLZ2EWqaXsP-jz6nfsxdJ1a0lzNSGB-e_1U/exec";
 
+// [Styles: Fonts] 候选字体列表（仅使用常见系统字体，不引入外链/自托管）
+const FONT_OPTIONS = [
+  { label: '华文彩云 (STCaiyun)', value: 'STCaiyun' },
+  { label: '方正舒体 (FZShuTi)', value: 'FZShuTi' },
+  { label: '方正姚体 (FZYaoti)', value: 'FZYaoti' },
+  { label: '微软雅黑 (Microsoft YaHei)', value: '"Microsoft YaHei"' },
+  { label: '等线 (DengXian)', value: 'DengXian' },
+  { label: '苹方-简 (PingFang SC)', value: '"PingFang SC"' },
+  { label: '冬青黑体-简 (Hiragino Sans GB)', value: '"Hiragino Sans GB"' },
+  { label: '宋体 (SimSun)', value: 'SimSun' },
+  { label: '黑体 (SimHei)', value: 'SimHei' },
+  { label: '楷体 (KaiTi)', value: 'KaiTi' },
+];
+  
 let allOptions = {}, activeFilters = {}, filterOptionsChoices, filterLogic = 'and';
 let originalItems = [], timeline = null;
 
@@ -154,6 +166,36 @@ const attributeLabels = {
   Company: "公司",
   ConsolePlatform: "主机类型"
 };
+
+// [Styles: Fonts] 把选中的家族名映射为包含回退的字体栈（仅使用系统/常见字体）
+function cssFont(val) {
+  switch (val) {
+    case 'STCaiyun':
+      return '"STCaiyun","华文彩云","Microsoft YaHei","PingFang SC","Hiragino Sans GB",sans-serif';
+    case 'FZShuTi':
+      return '"FZShuTi","方正舒体","Microsoft YaHei","PingFang SC","Hiragino Sans GB",sans-serif';
+    case 'FZYaoti':
+      return '"FZYaoti","方正姚体","Microsoft YaHei","PingFang SC","Hiragino Sans GB",sans-serif';
+    case '"Microsoft YaHei"':
+      return '"Microsoft YaHei","微软雅黑","PingFang SC","Hiragino Sans GB",Arial,sans-serif';
+    case 'DengXian':
+      return 'DengXian,"Microsoft YaHei","PingFang SC","Hiragino Sans GB",Arial,sans-serif';
+    case '"PingFang SC"':
+      return '"PingFang SC","Hiragino Sans GB","Microsoft YaHei",Arial,sans-serif';
+    case '"Hiragino Sans GB"':
+      return '"Hiragino Sans GB","PingFang SC","Microsoft YaHei",Arial,sans-serif';
+    case 'SimSun':
+      return '"SimSun","宋体","STSong","Songti SC",serif';
+    case 'SimHei':
+      return '"SimHei","黑体","STHeiti","PingFang SC","Hiragino Sans GB",sans-serif';
+    case 'KaiTi':
+      return '"KaiTi","KaiTi_GB2312","楷体","STKaiti","Kaiti SC","Songti SC",serif';
+    default:
+      // [Styles: Fonts] 未匹配到就原样返回（方便未来扩展自定义值）
+      return val;
+  }
+}
+
 
 function openAddEventForm() {
   document.getElementById('event-form').style.display = 'block';
@@ -430,20 +472,153 @@ attrSel.addEventListener("change", () => {
 
 //样式代码部分
 
-let styleTableBody = document.querySelector("#style-table tbody");
-let usedStyleTypes = {}; // 记录当前属性已经选择的样式类型
 
+// 10 款常见中文环境字体（只用系统/常见字体，不引外链/不自托管）
+const FONT_OPTIONS = [
+  { label: '华文彩云 (STCaiyun)', value: 'STCaiyun' },
+  { label: '方正舒体 (FZShuTi)', value: 'FZShuTi' },
+  { label: '方正姚体 (FZYaoti)', value: 'FZYaoti' },
+  { label: '微软雅黑 (Microsoft YaHei)', value: '"Microsoft YaHei"' },
+  { label: '等线 (DengXian)', value: 'DengXian' },
+  { label: '苹方-简 (PingFang SC)', value: '"PingFang SC"' },
+  { label: '冬青黑体-简 (Hiragino Sans GB)', value: '"Hiragino Sans GB"' },
+  { label: '宋体 (SimSun)', value: 'SimSun' },
+  { label: '黑体 (SimHei)', value: 'SimHei' },
+  { label: '楷体 (KaiTi)', value: 'KaiTi' },
+];
 
-// 全局状态（若已存在同名变量，可保留你自己的，只要含义一致即可）
+// 全局状态
 const boundStyleType = {};   // { [attr]: 'fontFamily' | 'fontColor' | ... | 'none' }
 let stagedType = 'none';     // 下拉当前临时选择（未确认前）
 let currentStyleAttr = null; // 当前正在编辑的属性 key
 
-// ===== 1) 打开样式窗口 =====
+// 每个属性下的规则列表：{ [attr]: Array<{ id, values: string[], style: {...} }> }
+const styleRules = window.styleRules || (window.styleRules = {});
+
+// 简单的行 id 生成
+function genId() { return (crypto.randomUUID?.() || (Date.now() + '-' + Math.random())); }
+
+/***********************
+ * [Styles: Fonts] 字体栈映射（第2步）
+ ***********************/
+function cssFont(val) {
+  switch (val) {
+    case 'STCaiyun':
+      return '"STCaiyun","华文彩云","Microsoft YaHei","PingFang SC","Hiragino Sans GB",sans-serif';
+    case 'FZShuTi':
+      return '"FZShuTi","方正舒体","Microsoft YaHei","PingFang SC","Hiragino Sans GB",sans-serif';
+    case 'FZYaoti':
+      return '"FZYaoti","方正姚体","Microsoft YaHei","PingFang SC","Hiragino Sans GB",sans-serif';
+    case '"Microsoft YaHei"':
+      return '"Microsoft YaHei","微软雅黑","PingFang SC","Hiragino Sans GB",Arial,sans-serif';
+    case 'DengXian':
+      return 'DengXian,"Microsoft YaHei","PingFang SC","Hiragino Sans GB",Arial,sans-serif';
+    case '"PingFang SC"':
+      return '"PingFang SC","Hiragino Sans GB","Microsoft YaHei",Arial,sans-serif';
+    case '"Hiragino Sans GB"':
+      return '"Hiragino Sans GB","PingFang SC","Microsoft YaHei",Arial,sans-serif';
+    case 'SimSun':
+      return '"SimSun","宋体","STSong","Songti SC",serif';
+    case 'SimHei':
+      return '"SimHei","黑体","STHeiti","PingFang SC","Hiragino Sans GB",sans-serif';
+    case 'KaiTi':
+      return '"KaiTi","KaiTi_GB2312","楷体","STKaiti","Kaiti SC","Songti SC",serif';
+    default:
+      return val; // 兜底
+  }
+}
+
+/***********************
+ * [Styles: Compile] 编译并注入 CSS（第5步）
+ ***********************/
+
+// 按你的真实 DOM 如需修改↓
+const EVENT_CONTAINER_SELECTOR = '.ev'; // 每个事件容器类名
+const TITLE_SELECTOR = '.ev-title';     // 事件标题元素类名（若想作用于整个事件，去掉它）
+
+function attrToDataName(attrKey) {
+  // 如需映射：if (attrKey === 'EventType') return 'event-type';
+  return attrKey;
+}
+
+let _styleTag = null;
+function ensureStyleTag() {
+  if (!_styleTag) {
+    _styleTag = document.getElementById('dynamic-style-rules');
+    if (!_styleTag) {
+      _styleTag = document.createElement('style');
+      _styleTag.id = 'dynamic-style-rules';
+      document.head.appendChild(_styleTag);
+    }
+  }
+}
+
+function escapeAttrValue(v) {
+  return String(v).replace(/"/g, '\\"');
+}
+
+// 把一条 rule.style 转成 CSS 声明串（调色盘完成后在这里继续加颜色）
+function ruleStyleToDecls(styleObj) {
+  const decls = [];
+  if (styleObj.fontFamily) {
+    decls.push(`font-family:${cssFont(styleObj.fontFamily)};`);
+  }
+  if (styleObj.fontColor) {
+    decls.push(`color:${styleObj.fontColor};`);
+  }
+  if (styleObj.backgroundColor) {
+    decls.push(`background-color:${styleObj.backgroundColor};`);
+  }
+  if (styleObj.borderColor) {
+    decls.push(`border-color:${styleObj.borderColor};`);
+  }
+  if (styleObj.lineColor) {
+    decls.push(`border-color:${styleObj.lineColor};`);
+  }
+  return decls;
+}
+
+/**
+ * 把 styleRules 全量编译为 CSS 并注入 <head>
+ */
+function compileStyleCSS() {
+  ensureStyleTag();
+  let css = '';
+
+  Object.keys(styleRules).forEach(attrKey => {
+    const dataName = attrToDataName(attrKey);
+    const rules = styleRules[attrKey] || [];
+
+    rules.forEach(rule => {
+      const decls = ruleStyleToDecls(rule.style);
+      if (decls.length === 0) return;
+
+      const values = Array.isArray(rule.values) ? rule.values : [];
+      if (values.length === 0) {
+        // 应用于所有带该 data-attr 的事件
+        const selector = `${EVENT_CONTAINER_SELECTOR}[data-${dataName}] ${TITLE_SELECTOR}`;
+        css += `${selector}{${decls.join('')}}\n`;
+      } else {
+        // 应用于具体属性值
+        values.forEach(val => {
+          const selector = `${EVENT_CONTAINER_SELECTOR}[data-${dataName}="${escapeAttrValue(val)}"] ${TITLE_SELECTOR}`;
+          css += `${selector}{${decls.join('')}}\n`;
+        });
+      }
+    });
+  });
+
+  _styleTag.textContent = css;
+}
+
+/***********************
+ * [Styles: UI] 打开/变更/确认/重置
+ ***********************/
+
+// 1) 打开样式窗口
 function openStyleWindow(attr) {
   currentStyleAttr = attr;
 
-  // 标题 & 显示窗口（你的实现里已有这些 DOM）
   document.getElementById('style-title').textContent = (window.attributeLabels?.[attr] || attr) + ' 样式';
   document.getElementById('style-window').style.display = 'block';
 
@@ -453,28 +628,21 @@ function openStyleWindow(attr) {
   const resetBtn        = document.getElementById('style-reset-btn');
   const addBtn          = document.getElementById('add-style-btn');
   const boundHint       = document.getElementById('bound-type-hint');
-  const fontDiv         = document.getElementById('fontSelectorDiv');
 
-  // 默认=无，且不写入绑定（避免误绑定）
+  // 下拉默认“无”，避免误绑定
   styleTypeSelect.value = 'none';
   stagedType = 'none';
-  if (fontDiv) fontDiv.style.display = 'none';
 
-  // 清空临时表格展示（不影响已绑定；未确认前不渲染历史）
+  // 清空“当前窗口展示”的行（不影响已绑定规则对象）
   styleTableBody.innerHTML = '';
 
   const bound = boundStyleType[attr] || 'none';
   if (bound !== 'none') {
-    // 已绑定：提示当前绑定，允许新增样式；显示“重置”，隐藏“确认”
     if (boundHint) boundHint.textContent = '当前样式：' + bound;
     if (confirmBtn) { confirmBtn.disabled = true; confirmBtn.style.display = 'none'; }
     if (resetBtn)   resetBtn.style.display = 'inline-block';
     if (addBtn)     addBtn.disabled = false;
-
-    // 如果你希望打开窗口时就显示与已绑定类型对应的输入区域，可按需展示
-    if (fontDiv) fontDiv.style.display = (bound === 'fontFamily') ? 'block' : 'none';
   } else {
-    // 未绑定：提示无、禁用新增样式、显示“确认绑定”、隐藏“重置”
     if (boundHint) boundHint.textContent = '当前样式：无';
     if (confirmBtn) { confirmBtn.disabled = true; confirmBtn.style.display = 'inline-block'; }
     if (resetBtn)   resetBtn.style.display = 'none';
@@ -482,35 +650,27 @@ function openStyleWindow(attr) {
   }
 }
 
-// ===== 2) 下拉变更（只更新 staged，不写入 bound）=====
+// 2) 下拉变更（只更新 staged，不写入 bound）
 function onStyleTypeChange() {
   const styleTypeSelect = document.getElementById('style-type');
   const confirmBtn      = document.getElementById('style-confirm-btn');
   const boundHint       = document.getElementById('bound-type-hint');
 
-  // 读取用户当前的临时选择（未确认前只算 staged）
   stagedType = styleTypeSelect.value;
 
-  // 如果当前属性已经绑定了样式类型，则不允许通过下拉直接改动
   const alreadyBound = (boundStyleType[currentStyleAttr] && boundStyleType[currentStyleAttr] !== 'none');
   if (alreadyBound) {
-    // 恢复下拉为 none，保持“只能先重置再更改”的规则
     styleTypeSelect.value = 'none';
     stagedType = 'none';
-    // 可选：给出轻提示（不建议用 alert，避免打断）
-    if (boundHint) boundHint.textContent = '当前绑定：' + boundStyleType[currentStyleAttr] + '（如需更改，请先点击“重置”）';
-    // 已绑定状态下，确认按钮始终不可用
+    if (boundHint) boundHint.textContent = '当前绑定：' + boundStyleType[currentStyleAttr] + '（如需更改，请先“重置”）';
     if (confirmBtn) confirmBtn.disabled = true;
     return;
   }
 
-  // 未绑定：只有选择了具体类型（非 none），才允许“确认绑定”
-  if (confirmBtn) {
-    confirmBtn.disabled = (stagedType === 'none');
-  }
+  if (confirmBtn) confirmBtn.disabled = (stagedType === 'none');
 }
 
-// ===== 3) 确认绑定（从 staged -> bound）=====
+// 3) 确认绑定（staged -> bound）并自动新增首行
 function onConfirmBind() {
   if (stagedType === 'none') return;
 
@@ -525,22 +685,21 @@ function onConfirmBind() {
     const ok = window.confirm('切换样式类型将清空当前属性下已设置的所有规则，是否继续？');
     if (!ok) return;
     styleTableBody.innerHTML = '';
+    if (styleRules[currentStyleAttr]) styleRules[currentStyleAttr] = [];
   }
 
-  // 正式绑定
   boundStyleType[currentStyleAttr] = stagedType;
 
-  // UI 切换
   if (confirmBtn) confirmBtn.style.display = 'none';
   if (resetBtn)   resetBtn.style.display = 'inline-block';
   if (addBtn)     addBtn.disabled = false;
   if (boundHint)  boundHint.textContent = '当前绑定：' + stagedType;
 
-  // ✅ 自动生成首行，让用户一眼看到可选控件
   addStyleRow();
+  compileStyleCSS(); // 双保险：初次也刷新一次
 }
 
-// ===== 4) 重置绑定（回到 none，清空规则）=====
+// 4) 重置（回到 none，清空规则与行）
 function onResetBind() {
   const styleTableBody  = document.getElementById('styleTableBody');
   const styleTypeSelect = document.getElementById('style-type');
@@ -548,36 +707,37 @@ function onResetBind() {
   const resetBtn        = document.getElementById('style-reset-btn');
   const addBtn          = document.getElementById('add-style-btn');
   const boundHint       = document.getElementById('bound-type-hint');
-  const fontDiv         = document.getElementById('fontSelectorDiv');
 
   const hasRows = styleTableBody.querySelectorAll('tr').length > 0;
   const ok = !hasRows || window.confirm('重置将清空该属性下所有规则，是否继续？');
   if (!ok) return;
 
-  // 回到无绑定
   boundStyleType[currentStyleAttr] = 'none';
   styleTableBody.innerHTML = '';
   styleTypeSelect.value = 'none';
   stagedType = 'none';
 
-  // UI 切换：显示确认、隐藏重置、禁用新增、提示无
+  if (window.styleRules && window.styleRules[currentStyleAttr]) {
+    window.styleRules[currentStyleAttr] = [];
+  }
+  compileStyleCSS();
+
   if (confirmBtn) { confirmBtn.disabled = true; confirmBtn.style.display = 'inline-block'; }
   if (resetBtn)   resetBtn.style.display = 'none';
   if (addBtn)     addBtn.disabled = true;
   if (boundHint)  boundHint.textContent = '当前样式：无';
-  if (fontDiv)    fontDiv.style.display = 'none';
 }
 
-// （可选）初始化一次事件绑定（如果你没有在 HTML 里写 onclick/onchange）
+// （如未在 HTML 写 onclick/onchange，可启用以下绑定）
 document.getElementById('style-confirm-btn')?.addEventListener('click', onConfirmBind);
 document.getElementById('style-reset-btn')?.addEventListener('click', onResetBind);
-// 下拉的 onchange 你已经在 HTML 写了：onchange="onStyleTypeChange()"
-  
-function closeStyleWindow() {
-  document.getElementById('style-window').style.display = 'none';
-}
+// 下拉 <select id="style-type"> 的 onchange 已在 HTML：onchange="onStyleTypeChange()"
+// “新增样式”按钮通常是 onclick="addStyleRow()"；如果没有，可加：
+// document.getElementById('add-style-btn')?.addEventListener('click', addStyleRow);
 
-// 添加一行样式
+/***********************
+ * [Styles: Rows] 新增/删除样式行（第3+4步）
+ ***********************/
 function addStyleRow() {
   const bound = boundStyleType[currentStyleAttr];
   if (!bound || bound === 'none') {
@@ -591,13 +751,29 @@ function addStyleRow() {
     return;
   }
 
+  // 为该行创建一个规则对象
+  if (!styleRules[currentStyleAttr]) styleRules[currentStyleAttr] = [];
+  const rule = { id: genId(), values: [], style: {} };
+  styleRules[currentStyleAttr].push(rule);
+
   const tr = document.createElement('tr');
 
   // 左：样式内容控件
   const tdContent = document.createElement('td');
-  tdContent.appendChild(buildStyleControl(bound));
+  tdContent.dataset.styleType = bound;      // 兼容旧 confirmStyle，如果你还用它
+  const control = buildStyleControl(bound); // { el, inputEl }
+  tdContent.appendChild(control.el);
 
-  // 中：应用属性/子属性（如有子属性，请在此生成多个 <option>）
+  // 控件写入规则 + 触发编译
+  if (bound === 'fontFamily' && control.inputEl) {
+    control.inputEl.addEventListener('change', (e) => {
+      rule.style.fontFamily = e.target.value || '';
+      compileStyleCSS();
+    });
+  }
+  // 未来颜色控件同理：rule.style.fontColor / backgroundColor / borderColor / ...
+
+  // 中：应用范围（现在先把“当前属性本身”放进 options；未来可换成具体取值）
   const tdAttr = document.createElement('td');
   const select = document.createElement('select');
   select.multiple = true;
@@ -606,85 +782,86 @@ function addStyleRow() {
   </option>`;
   tdAttr.appendChild(select);
 
-  // 右：操作（删除本行）
+  select.addEventListener('change', () => {
+    rule.values = Array.from(select.selectedOptions).map(o => o.value);
+    compileStyleCSS();
+  });
+
+  // 右：删除本行
   const tdAction = document.createElement('td');
   const delBtn = document.createElement('button');
   delBtn.type = 'button';
   delBtn.textContent = '×';
-  delBtn.addEventListener('click', () => tr.remove());
+  delBtn.addEventListener('click', () => {
+    tr.remove();
+    const arr = styleRules[currentStyleAttr] || [];
+    const idx = arr.findIndex(r => r.id === rule.id);
+    if (idx >= 0) arr.splice(idx, 1);
+    compileStyleCSS();
+  });
   tdAction.appendChild(delBtn);
 
   tr.appendChild(tdContent);
   tr.appendChild(tdAttr);
   tr.appendChild(tdAction);
   tbody.appendChild(tr);
+
+  // 初次编译（有默认值时立刻生效；没有也安全）
+  compileStyleCSS();
 }
 
-// 根据已绑定类型构造控件
+/***********************
+ * [Styles: Controls] 构建控件
+ ***********************/
 function buildStyleControl(type) {
   const wrapper = document.createElement('div');
 
   if (type === 'fontFamily') {
     const fontSelect = document.createElement('select');
-    fontSelect.innerHTML = `
-      <option value="">请选择字体</option>
-      <option value="Arial">Arial</option>
-      <option value="SimSun">宋体</option>
-      <option value="SimHei">黑体</option>
-      <option value="Microsoft YaHei">微软雅黑</option>
-      <option value="KaiTi">楷体</option>
-      <option value="STFangsong">仿宋</option>
-      <option value="Courier New">Courier New</option>
-    `;
+
+    // 占位项
+    const placeholder = document.createElement('option');
+    placeholder.value = '';
+    placeholder.textContent = '请选择字体';
+    placeholder.selected = true;
+    fontSelect.appendChild(placeholder);
+
+    // 用 FONT_OPTIONS 生成选项
+    (window.FONT_OPTIONS || []).forEach(f => {
+      const opt = document.createElement('option');
+      opt.value = f.value;   // "STCaiyun" / "SimSun" / '"Microsoft YaHei"'
+      opt.textContent = f.label;
+      fontSelect.appendChild(opt);
+    });
+
     wrapper.appendChild(fontSelect);
-  } else if (
-    type === 'fontColor' ||
-    type === 'borderColor' ||
-    type === 'backgroundColor' ||
-    type === 'lineColor'
-  ) {
+    return { el: wrapper, inputEl: fontSelect };
+  }
+
+  // 颜色类型（调色盘接入时会继续完善）
+  if (type === 'fontColor' || type === 'borderColor' || type === 'backgroundColor' || type === 'lineColor') {
     const color = document.createElement('input');
     color.type = 'color';
     wrapper.appendChild(color);
-  } else {
-    const span = document.createElement('span');
-    span.textContent = type + '（待配置）';
-    wrapper.appendChild(span);
+    return { el: wrapper, inputEl: color };
   }
 
-  return wrapper;
+  // 其他类型（占位）
+  const span = document.createElement('span');
+  span.textContent = type + '（待配置）';
+  wrapper.appendChild(span);
+  return { el: wrapper, inputEl: null };
 }
 
-// 确认按钮
-  
+/***********************
+ * [Styles: (Optional Legacy)] 旧的“确认样式”逻辑
+ * 现在样式已即时编译；如果你还想保留按钮，可让它只关闭窗口
+ ***********************/
 function confirmStyle() {
-  const rows = styleTableBody.querySelectorAll('tr');
-  rows.forEach(row => {
-    const tdContent = row.children[0];
-    const tdAttr = row.children[1];
-
-    const styleType = tdContent.textContent.split(' ')[0]; // 获取样式类型
-    const selectedAttrs = Array.from(tdAttr.querySelectorAll('option:checked')).map(o => o.value);
-
-    selectedAttrs.forEach(attr => {
-      if (!customStyles[attr]) customStyles[attr] = {};
-
-      // 处理不同样式类型
-      if (styleType === 'fontFamily') {
-        // 字体类型，直接取内容
-        customStyles[attr]['fontFamily'] = tdContent.textContent;
-      } else if (styleType === 'color') {
-        customStyles[attr]['color'] = tdContent.textContent;
-      } else if (styleType === 'background') {
-        customStyles[attr]['backgroundColor'] = tdContent.textContent;
-      } else if (styleType === 'border') {
-        customStyles[attr]['border'] = tdContent.textContent;
-      }
-      // 可以根据需要继续扩展其他样式类型
-    });
-  });
-
-  applyCustomStyles(); // 调用函数将 customStyles 应用到页面
+  // 如果仍在用这个按钮，这里只做关闭弹窗，避免“双轨”
+  document.getElementById('style-window').style.display = 'none';
+  // 如仍需旧逻辑，请改用 tdContent.dataset.styleType 获取类型
+  // const styleType = tdContent.dataset.styleType || 'unknown';
 }
 
 </script>
