--- a/public/test.html
+++ b/public/test.html
@@ -457,8 +457,8 @@ timeline = new vis.Timeline(
       const title = escapeHTML(item?.content ?? '');
       return `<div class="ev" ${attrs}>
                 <div class="ev-title">${title}</div>
-              </div>`;*/
-    }
+              </div>`;
+    }*/
   }
 );
 /* -------- 获取下拉选项 -------- */
